--- a/package.json
+++ b/package.json
@@ -69,7 +69,76 @@
       "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
-      "./react-18-code-splitting/*"
+      "./react-18-code-splitting/*",
+      "./react-18-server-2-server",
+      "./react-18-server-2-server/*",
+      "./react-18-ssr",
+      "./react-hmr",
+      "./react-hmr/*",
+      "./react-in-vue",
+      "./react-in-vue/*",
+      "./react-nested-routers",
+      "./react-nested-routers/*",
+      "./react-nextjs/nextjs-host-react-remote",
+      "./react-nextjs/nextjs-host-react-remote/*",
+      "./react-nextjs/react-host-nextjs-remote",
+      "./react-nextjs/react-host-nextjs-remote/*",
+      "./react-nextjs/react-host-remote",
+      "./react-nextjs/react-host-remote/*",
+      "./react-spectrum",
+      "./redux-reducer-injection",
+      "./redux-reducer-injection/*",
+      "./self-healing",
+      "./self-healing/*",
+      "./server-side-render-only",
+      "./server-side-rendering",
+      "./server-side-rendering/*",
+      "./shared-context",
+      "./shared-context/*",
+      "./shared-routes2",
+      "./shared-routes2/*",
+      "./shared-routing",
+      "./shared-routing/*",
+      "./shared-store-cross-framework",
+      "./shared-store-cross-framework/*",
+      "./startup-code",
+      "./startup-code/*",
+      "./styled-components",
+      "./third-party-scripts",
+      "./third-party-scripts/*",
+      "./typescript-monorepo",
+      "./typescript-monorepo/*",
+      "./typescript-project-references",
+      "./typescript-project-references/*",
+      "./typescript-react-fallback",
+      "./typescript-react-fallback/*",
+      "./umd-federation",
+      "./umd-federation/*",
+      "./version-discrepancy",
+      "./version-discrepancy/*",
+      "./vite-react-microfrontends",
+      "./vite-react-microfrontends/*",
+      "./vite-react-simple",
+      "./vite-react-simple/*",
+      "./vite-svelte-microfrontends",
+      "./vite-svelte-microfrontends/*",
+      "./vite-vue-microfrontends",
+      "./vite-vue-microfrontends/*",
+      "./vue-cli/*",
+      "./vue2-in-vue3",
+      "./vue2-in-vue3/*",
+      "./vue3-demo-federation-with-vite",
+      "./vue3-demo-federation-with-vite/*",
+      "./vue3-demo",
+      "./vue3-demo/*",
+      "./modernjs",
+      "./modernjs/*",
+      "./medusa-example",
+      "./medusa-example/*",
+      "./medusa-delegate-example",
+      "./medusa-delegate-example/*",
+      "./modernjs-medusa",
+      "./modernjs-medusa/*"
     ],
     "nohoist": [
       "**/@types",
