--- a/delegate-modules/package.json
+++ b/delegate-modules/package.json
@@ -1,12 +1,10 @@
 {
   "name": "delegate-modules",
   "private": true,
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./app1",
       "./app2"
-    ]
-  },
+    ],
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=delegate-modules_* --parallel start",
