--- a/cra-react-app-rewired/package.json
+++ b/cra-react-app-rewired/package.json
@@ -1,12 +1,10 @@
 {
   "name": "cra-react-app-rewired",
   "private": true,
-  "workspaces": {
-    "packages": [
+  "workspaces":  [
       "./host",
       "./remote"
-    ]
-  },
+    ],
   "version": "0.0.0",
   "scripts": {
     "start": "concurrently 'cd ./host && yarn start' 'cd ./remote && yarn start'",
