--- a/cra/package.json
+++ b/cra/package.json
@@ -2,12 +2,10 @@
   "name": "cra",
   "private": true,
   "version": "0.0.1",
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./host",
       "./remote"
-    ]
-  },
+    ],
   "scripts": {
     "start": "lerna run --scope=cra_* start",
     "stop": "lerna run --scope=cra_* stop",
