--- a/different-react-versions-16-18-typescript/package.json
+++ b/different-react-versions-16-18-typescript/package.json
@@ -2,12 +2,10 @@
   "name": "different-react-versions-16-18-typescript",
   "private": true,
   "version": "0.0.0",
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "app1",
       "app2"
-    ]
-  },
+    ],
   "scripts": {
     "start": "lerna run --parallel start",
     "build": "lerna run build",
