--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -1,13 +1,11 @@
 {
   "name": "federated-npm",
   "private": true,
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./app1",
       "./app2",
       "./app3"
-    ]
-  },
+    ],
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=federated-npm_* --parallel start",
