--- a/genesis/package.json
+++ b/genesis/package.json
@@ -1,12 +1,10 @@
 {
   "name": "genesis",
   "private": true,
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./ssr-mf-about",
       "./ssr-mf-home"
-    ]
-  },
+    ],
   "version": "0.0.0",
   "scripts": {
     "dev": "concurrently --raw \"lerna run --scope=genesis_ssr-mf-about dev\" \"lerna run --scope=genesis_ssr-mf-home dev\"",
