--- a/modernjs/package.json
+++ b/modernjs/package.json
@@ -2,12 +2,11 @@
   "name": "modernjs",
   "private": true,
   "version": "1.0.0",
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "host",
       "provider"
-    ]
-  },
+    ],
+
   "scripts": {
     "start": "lerna run --parallel dev",
     "build": "lerna run build",
