--- a/package.json
+++ b/package.json
@@ -9,155 +9,6 @@
   ],
   "license": "MIT",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "./advanced-api/automatic-vendor-sharing",
-      "./advanced-api/automatic-vendor-sharing/*",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/dynamic-remotes",
-      "./federated-css-react-ssr/*",
-      "./federated-css-react-ssr",
-      "./advanced-api/dynamic-remotes/*",
-      "./apollo-client",
-      "./basic-host-remote",
-      "./basic-host-remote/*",
-      "./bi-directional",
-      "./bi-directional/*",
-      "./complete-react-case",
-      "./complete-react-case/*",
-      "./comprehensive-demo-react16",
-      "./comprehensive-demo-react16/*",
-      "./comprehensive-demo-react18",
-      "./comprehensive-demo-react18/*",
-      "./cra",
-      "./cra/*",
-      "./css-isolation",
-      "./css-isolation/*",
-      "./cypress",
-      "./delegate-modules",
-      "./delegate-modules/*",
-      "./different-react-versions-16-17-typescript",
-      "./different-react-versions-16-17",
-      "./different-react-versions-16-18-typescript",
-      "./different-react-versions-16-18",
-      "./different-react-versions-isolated",
-      "./different-react-versions-isolated/*",
-      "./different-react-versions-typescript",
-      "./different-react-versions-typescript/*",
-      "./different-react-versions",
-      "./different-react-versions/*",
-      "./dynamic-system-host",
-      "./dynamic-system-host/*",
-      "./federated-npm",
-      "./federated-npm/*",
-      "./genesis",
-      "./genesis/*",
-      "./loadable-react-18",
-      "./loadable-react-18/*",
-      "./native-federation-tests-typescript-plugins",
-      "./native-federation-tests-typescript-plugins/*",
-      "./nested",
-      "./nested/*",
-      "./nextjs-react",
-      "./nextjs-react/*",
-      "./nextjs-ssr",
-      "./nextjs-ssr/*",
-      "./nextjs-ssr/*",
-      "./nextjs-ssr-react-query",
-      "./react-16-17-18-ssr",
-      "./react-18-code-splitting",
-      "./react-18-code-splitting/*",
-      "./react-18-server-2-server",
-      "./react-18-server-2-server/*",
-      "./react-18-ssr",
-      "./react-hmr",
-      "./react-hmr/*",
-      "./react-in-vue",
-      "./react-in-vue/*",
-      "./react-nested-routers",
-      "./react-nested-routers/*",
-      "./react-nextjs/nextjs-host-react-remote",
-      "./react-nextjs/nextjs-host-react-remote/*",
-      "./react-nextjs/react-host-nextjs-remote",
-      "./react-nextjs/react-host-nextjs-remote/*",
-      "./react-nextjs/react-host-remote",
-      "./react-nextjs/react-host-remote/*",
-      "./react-spectrum",
-      "./redux-reducer-injection",
-      "./redux-reducer-injection/*",
-      "./self-healing",
-      "./self-healing/*",
-      "./server-side-render-only",
-      "./server-side-rendering",
-      "./server-side-rendering/*",
-      "./shared-context",
-      "./shared-context/*",
-      "./shared-routes2",
-      "./shared-routes2/*",
-      "./shared-routing",
-      "./shared-routing/*",
-      "./shared-store-cross-framework",
-      "./shared-store-cross-framework/*",
-      "./startup-code",
-      "./startup-code/*",
-      "./styled-components",
-      "./third-party-scripts",
-      "./third-party-scripts/*",
-      "./typescript-monorepo",
-      "./typescript-monorepo/*",
-      "./typescript-project-references",
-      "./typescript-project-references/*",
-      "./typescript-react-fallback",
-      "./typescript-react-fallback/*",
-      "./umd-federation",
-      "./umd-federation/*",
-      "./version-discrepancy",
-      "./version-discrepancy/*",
-      "./vite-react-microfrontends",
-      "./vite-react-microfrontends/*",
-      "./vite-react-simple",
-      "./vite-react-simple/*",
-      "./vite-svelte-microfrontends",
-      "./vite-svelte-microfrontends/*",
-      "./vite-vue-microfrontends",
-      "./vite-vue-microfrontends/*",
-      "./vue-cli/*",
-      "./vue2-in-vue3",
-      "./vue2-in-vue3/*",
-      "./vue3-demo-federation-with-vite",
-      "./vue3-demo-federation-with-vite/*",
-      "./vue3-demo",
-      "./vue3-demo/*",
-      "./modernjs",
-      "./modernjs/*",
-      "./medusa-example",
-      "./medusa-example/*",
-      "./medusa-delegate-example",
-      "./medusa-delegate-example/*",
-      "./modernjs-medusa",
-      "./modernjs-medusa/*"
-    ],
-    "nohoist": [
-      "**/@types",
-      "**/@module-federation/**",
-      "**/@types/**",
-      "**/styled-jsx/**",
-      "**/styled-jsx",
-      "**/react/**",
-      "**/react",
-      "**/next/**",
-      "**/next",
-      "**/react-dom/**",
-      "**/react-dom",
-      "**/svelte",
-      "**/svelte/**",
-      "**/svelte-loader",
-      "**/svelte-loader/**"
-    ]
-  },
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "2.38.3",
     "allure-commandline": "2.21.0",
@@ -177,6 +28,7 @@
     "wait-on": "7.0.1"
   },
   "scripts": {
+    "postinstall": "lerna bootstrap --ignore-scripts",
     "list:all": "node repotools.js",
     "list:changed": "node repotools.js --since=origin/master",
     "bootstrap": "lerna bootstrap --ignore-scripts",
