--- a/react-storybook/package.json
+++ b/react-storybook/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-storybook",
   "private": true,
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./host",
       "./remote"
-    ]
-  },
+    ],
   "scripts": {
     "start": "concurrently 'cd ./host && yarn start' 'cd ./remote && yarn start'",
     "build": "concurrently 'cd ./host && yarn build' 'cd ./remote && yarn build'",
