--- a/rollup-federation-demo/package.json
+++ b/rollup-federation-demo/package.json
@@ -1,13 +1,11 @@
 {
   "name": "rollup-federation-demo",
   "private": true,
-  "workspaces": {
-    "packages": [
+    "workspaces": [
       "./rollup-spa",
       "./rs-sidecar",
       "./webpack-spa"
-    ]
-  },
+    ],
   "scripts": {
     "start": "lerna run --scope=rollup-federation-demo_* start",
     "e2e:ci": "yarn start & wait-on http-get://localhost:8082/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
