--- a/package.json
+++ b/package.json
@@ -14,199 +14,97 @@
     "advanced-api/automatic-vendor-sharing/app1",
     "advanced-api/automatic-vendor-sharing/app2",
     "advanced-api/dynamic-remotes",
-    "advanced-api/dynamic-remotes/app1",
-    "advanced-api/dynamic-remotes/app2",
-    "advanced-api/dynamic-remotes/app3",
+    "advanced-api/dynamic-remotes/*",
     "advanced-api/dynamic-remotes-runtime-environment-variables",
-    "advanced-api/dynamic-remotes-runtime-environment-variables/host",
-    "advanced-api/dynamic-remotes-runtime-environment-variables/remote",
+    "advanced-api/dynamic-remotes-runtime-environment-variables/*",
     "advanced-api/dynamic-remotes-synchronous-imports",
-    "advanced-api/dynamic-remotes-synchronous-imports/app1",
-    "advanced-api/dynamic-remotes-synchronous-imports/app2",
+    "advanced-api/dynamic-remotes-synchronous-imports/*",
     "angular-universal-ssr",
-    "angular-universal-ssr/client-app",
-    "angular-universal-ssr/host-app",
+    "angular-universal-ssr/*",
     "angular11-microfrontends-ngrx",
-    "angular11-microfrontends-ngrx/projects/mdmf-shared",
+    "angular11-microfrontends-ngrx/*",
     "angular11-microfrontends-ngxs",
-    "angular11-microfrontends-ngxs/projects/mdmf-shared",
+    "angular11-microfrontends-ngxs/*",
     "angular11-microfrontends-scully",
-    "angular11-microfrontends-scully/projects/mdmf-shared",
+    "angular11-microfrontends-scully/*",
     "angular12-microfrontends",
     "angular14-react",
-    "angular14-react/angular-profile",
-    "angular14-react/react-user-list",
-    "angular15-microfrontends-lazy-components",
-    "angular15-microfrontends-lazy-components/projects/mdmf-shared",
-    "angular15-vue3",
-    "angular15-vue3/vue-remote",
+    "angular14-react/*",
+    "angular15-vue3/*",
     "apollo-client",
-    "apollo-client/app1",
-    "apollo-client/app2",
+    "apollo-client/*",
     "basic-host-remote",
-    "basic-host-remote/app1",
-    "basic-host-remote/app2",
+    "basic-host-remote/*",
     "bi-directional",
-    "bi-directional/app1",
-    "bi-directional/app2",
+    "bi-directional/*",
     "cloud/azure-functions-node-v4",
-    "cloud/azure-functions-node-v4/remote",
-    "cloud/azure-functions-node-v4/shell/api",
-    "cloud/azure-functions-node-v4/shell/client",
+    "cloud/azure-functions-node-v4/*",
     "complete-react-case",
-    "complete-react-case/component-app",
-    "complete-react-case/lib-app",
-    "complete-react-case/main-app",
+    "complete-react-case/*",
     "comprehensive-demo-react16",
-    "comprehensive-demo-react16/app-01",
-    "comprehensive-demo-react16/app-02",
-    "comprehensive-demo-react16/app-03",
-    "comprehensive-demo-react16/app-04",
-    "comprehensive-demo-react16/app-05",
+    "comprehensive-demo-react16/*",
     "comprehensive-demo-react18",
-    "comprehensive-demo-react18/app-01",
-    "comprehensive-demo-react18/app-02",
-    "comprehensive-demo-react18/app-03",
-    "comprehensive-demo-react18/app-04",
-    "comprehensive-demo-react18/app-05",
+    "comprehensive-demo-react18/*",
     "cra",
-    "cra/host",
-    "cra/remote",
+    "cra/*",
     "cra-react-app-rewired",
-    "cra-react-app-rewired/host",
-    "cra-react-app-rewired/remote",
+    "cra-react-app-rewired/*",
     "css-isolation",
-    "css-isolation/app1",
-    "css-isolation/app2",
+    "css-isolation/*",
     "cypress",
     "delegate-modules",
-    "delegate-modules/app1",
-    "delegate-modules/app2",
+    "delegate-modules/*",
     "different-react-versions",
-    "different-react-versions/app1",
-    "different-react-versions/app2",
+    "different-react-versions/*",
     "different-react-versions-16-17",
-    "different-react-versions-16-17/app1",
-    "different-react-versions-16-17/app2",
+    "different-react-versions-16-17/*",
     "different-react-versions-16-17-typescript",
-    "different-react-versions-16-17-typescript/app1",
-    "different-react-versions-16-17-typescript/app2",
+    "different-react-versions-16-17-typescript/*",
     "different-react-versions-16-18",
-    "different-react-versions-16-18/app1",
-    "different-react-versions-16-18/app2",
+    "different-react-versions-16-18/*",
     "different-react-versions-16-18-typescript",
-    "different-react-versions-16-18-typescript/app1",
-    "different-react-versions-16-18-typescript/app2",
+    "different-react-versions-16-18-typescript/*",
     "different-react-versions-isolated",
-    "different-react-versions-isolated/app1",
-    "different-react-versions-isolated/app2",
+    "different-react-versions-isolated/*",
     "different-react-versions-typescript",
-    "different-react-versions-typescript/app1",
-    "different-react-versions-typescript/app2",
+    "different-react-versions-typescript/*",
     "dynamic-remotes-node",
     "dynamic-system-host",
-    "dynamic-system-host/app1",
-    "dynamic-system-host/app2",
-    "dynamic-system-host/app3",
+    "dynamic-system-host/*",
     "federated-css",
-    "federated-css/consumers-nextjs/any-combination",
-    "federated-css/consumers-nextjs/combination-of-4",
-    "federated-css/consumers-nextjs/jss-and-tailwind-global",
-    "federated-css/consumers-nextjs/jss-css-and-tailwind-module",
-    "federated-css/consumers-nextjs/less-and-styled-component",
-    "federated-css/consumers-react/any-combination",
-    "federated-css/consumers-react/combination-of-4",
-    "federated-css/consumers-react/combination-of-5",
-    "federated-css/consumers-react/css-and-styled-component",
-    "federated-css/consumers-react/css-module-and-jss",
-    "federated-css/consumers-react/less-and-scss",
-    "federated-css/consumers-react/tailwind-global-and-less",
-    "federated-css/consumers-react/tailwind-module-and-jss",
-    "federated-css/expose-remotes/expose-css",
-    "federated-css/expose-remotes/expose-css-module",
-    "federated-css/expose-remotes/expose-jss",
-    "federated-css/expose-remotes/expose-less",
-    "federated-css/expose-remotes/expose-scss",
-    "federated-css/expose-remotes/expose-styled-component",
-    "federated-css/expose-remotes/expose-tailwind-css-global",
-    "federated-css/expose-remotes/expose-tailwind-css-module",
+    "federated-css/*/*",
     "federated-css-react-ssr",
-    "federated-css-react-ssr/expose-apps/expose-css",
-    "federated-css-react-ssr/expose-apps/expose-css-module",
-    "federated-css-react-ssr/expose-apps/expose-jss",
-    "federated-css-react-ssr/expose-apps/expose-less",
-    "federated-css-react-ssr/expose-apps/expose-scss",
-    "federated-css-react-ssr/expose-apps/expose-styled-component",
-    "federated-css-react-ssr/expose-apps/expose-tailwind-css",
-    "federated-css-react-ssr/shell-apps/css-jss",
-    "federated-css-react-ssr/shell-apps/css-scss",
-    "federated-css-react-ssr/shell-apps/jss-styled-components",
-    "federated-css-react-ssr/shell-apps/jss-styled-components-css-module",
-    "federated-css-react-ssr/shell-apps/less-scss",
-    "federated-css-react-ssr/shell-apps/scss-tailwind-css",
+    "federated-css-react-ssr/*/*",
     "federated-library-from-cdn",
-    "federated-library-from-cdn/app1",
-    "federated-library-from-cdn/app2",
-    "federated-library-from-cdn/remoteLibrary",
+    "federated-library-from-cdn/*",
     "federated-npm",
-    "federated-npm/app1",
-    "federated-npm/app2",
-    "federated-npm/app3",
+    "federated-npm/*",
     "frontend-discovery-service",
-    "frontend-discovery-service/app-shell",
-    "frontend-discovery-service/catalog-1.0.0",
-    "frontend-discovery-service/catalog-2.0.0",
-    "frontend-discovery-service/product-1.0.0",
+    "frontend-discovery-service/*",
     "genesis",
-    "genesis/ssr-mf-about",
-    "genesis/ssr-mf-home",
+    "genesis/*",
     "i18next-nextjs-react",
-    "i18next-nextjs-react/i18next-shared-lib",
-    "i18next-nextjs-react/next-host",
-    "i18next-nextjs-react/react-host",
-    "i18next-nextjs-react/react-remote",
+    "i18next-nextjs-react/*",
     "loadable-react-16",
-    "loadable-react-16/app1",
-    "loadable-react-16/app2",
+    "loadable-react-16/*",
     "loadable-react-18",
-    "loadable-react-18/app1",
-    "loadable-react-18/app2",
+    "loadable-react-18/*",
     "medusa-delegate-example",
-    "medusa-delegate-example/dsl",
-    "medusa-delegate-example/home",
-    "medusa-delegate-example/nav",
-    "medusa-delegate-example/search",
-    "medusa-delegate-example/utils",
+    "medusa-delegate-example/*",
     "medusa-example",
-    "medusa-example/dsl",
-    "medusa-example/home",
-    "medusa-example/nav",
-    "medusa-example/search",
-    "medusa-example/utils",
+    "medusa-example/*",
     "medusa-nx-native-federation-example",
-    "medusa-nx-native-federation-example/packages/dsl",
-    "medusa-nx-native-federation-example/packages/home",
-    "medusa-nx-native-federation-example/packages/native-federation-plugin",
-    "medusa-nx-native-federation-example/packages/nav",
-    "medusa-nx-native-federation-example/packages/search",
-    "medusa-nx-native-federation-example/packages/utils",
     "modernjs",
-    "modernjs/host",
-    "modernjs/provider",
+    "modernjs/*",
     "modernjs-medusa",
-    "modernjs-medusa/host",
-    "modernjs-medusa/provider",
+    "modernjs-medusa/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
-    "native-federation-tests-typescript-plugins/host",
-    "native-federation-tests-typescript-plugins/remote",
+    "native-federation-tests-typescript-plugins/*",
     "nested",
-    "nested/app1",
-    "nested/app2",
-    "nested/app3",
+    "nested/*",
     "nextjs-react",
-    "nextjs-react/host-app",
-    "nextjs-react/remote-app",
+    "nextjs-react/*",
     "nextjs-ssr",
     "nextjs-ssr/checkout",
     "nextjs-ssr/home",
