--- a/package.json
+++ b/package.json
@@ -121,41 +121,26 @@
     "nextjs-v12/shared",
     "nextjs-v12/shop",
     "nextjs-v13",
-    "nextjs-v13/checkout",
-    "nextjs-v13/home",
-    "nextjs-v13/shared",
-    "nextjs-v13/shop",
+    "nextjs-v13/*",
     "version-discrepancy",
-    "version-discrepancy/app1",
-    "version-discrepancy/app2",
+    "version-discrepancy/*",
     "vite-react-microfrontends",
-    "vite-react-microfrontends/host",
-    "vite-react-microfrontends/remote",
+    "vite-react-microfrontends/*",
     "vite-react-simple",
-    "vite-react-simple/rs-sidecart",
-    "vite-react-simple/vite-react",
-    "vite-react-simple/webpack-spa",
+    "vite-react-simple/*",
     "vite-svelte-microfrontends",
-    "vite-svelte-microfrontends/host",
-    "vite-svelte-microfrontends/remote",
+    "vite-svelte-microfrontends/*",
     "vite-vue-microfrontends",
-    "vite-vue-microfrontends/host",
-    "vite-vue-microfrontends/remote",
+    "vite-vue-microfrontends/*",
     "vue-cli",
-    "vue-cli/consumer",
-    "vue-cli/core",
-    "vue-cli/other",
+    "vue-cli/*",
     "vue2-in-vue3",
-    "vue2-in-vue3/vue2",
-    "vue2-in-vue3/vue3",
-    "vue3-cli-demo/app-exposes",
-    "vue3-cli-demo/app-general",
+    "vue2-in-vue3/*",
+    "vue3-cli-demo/*",
     "vue3-demo",
-    "vue3-demo/home",
-    "vue3-demo/layout",
+    "vue3-demo/*",
     "vue3-demo-federation-with-vite",
-    "vue3-demo-federation-with-vite/vite-side",
-    "vue3-demo-federation-with-vite/webpack-side"
+    "vue3-demo-federation-with-vite/*",
   ],
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "2.38.3",
