--- a/package.json
+++ b/package.json
@@ -140,8 +140,11 @@
     "vue3-demo",
     "vue3-demo/*",
     "vue3-demo-federation-with-vite",
-    "vue3-demo-federation-with-vite/*",
+    "vue3-demo-federation-with-vite/*"
   ],
+  "resolutions": {
+    "puppeteer": "^19.0.0"
+  },
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "2.38.3",
     "allure-commandline": "2.21.0",
