--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "private": true,
   "workspaces": [
     "advanced-api/automatic-vendor-sharing",
-    "advanced-api/automatic-vendor-sharing/app1",
-    "advanced-api/automatic-vendor-sharing/app2",
+    "advanced-api/automatic-vendor-sharing/*",
     "advanced-api/dynamic-remotes",
     "advanced-api/dynamic-remotes/*",
     "advanced-api/dynamic-remotes-runtime-environment-variables",
@@ -106,20 +105,12 @@
     "nextjs-react",
     "nextjs-react/*",
     "nextjs-ssr",
-    "nextjs-ssr/checkout",
-    "nextjs-ssr/home",
-    "nextjs-ssr/shop",
+    "nextjs-ssr/*",
     "nextjs-ssr-delegate-modules",
-    "nextjs-ssr-delegate-modules/checkout",
-    "nextjs-ssr-delegate-modules/home",
-    "nextjs-ssr-delegate-modules/shop",
+    "nextjs-ssr-delegate-modules/*",
     "nextjs-ssr-react-query",
-    "nextjs-ssr-react-query/libs/domain",
     "nextjs-v12",
-    "nextjs-v12/checkout",
-    "nextjs-v12/home",
-    "nextjs-v12/shared",
-    "nextjs-v12/shop",
+    "nextjs-v12/*",
     "nextjs-v13",
     "nextjs-v13/*",
     "version-discrepancy",
