--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -12,6 +12,7 @@
   "author": "rahulteja-dev",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "wait-on": "7.0.1"
   }
 }
