--- a/react-nextjs/nextjs-host-react-remote/package.json
+++ b/react-nextjs/nextjs-host-react-remote/package.json
@@ -15,6 +15,7 @@
   "author": "Omher",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "7.6.0"
+    "concurrently": "7.6.0",
+    "wait-on": "7.0.1"
   }
 }
