--- a/delegate-modules/package.json
+++ b/delegate-modules/package.json
@@ -1,7 +1,7 @@
 {
   "name": "delegate-modules",
-
-    "workspaces": [
+  "private": true,
+  "workspaces": [
       "./app1",
       "./app2"
     ],
