--- a/different-react-versions-16-17-typescript/package.json
+++ b/different-react-versions-16-17-typescript/package.json
@@ -5,6 +5,7 @@
       "app1",
       "app2"
     ],
+  "private": true,
   "scripts": {
     "start": "lerna run --parallel start",
     "build": "lerna run build",
