--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -4,6 +4,7 @@
     "./app3",
     "./app4"
   ],
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "start": "concurrently 'cd app1; yarn dev' 'cd app2; yarn dev'",
