--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -1,6 +1,9 @@
 {
 
   "version": "1.2.3",
+  "private": true,
+
+
   "name": "federated-css-mono",
     "workspaces": [
       "expose-remotes/expose-css",
