--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "federated-npm",
-
-    "workspaces": [
+  "private": true,
+  "workspaces": [
       "./app1",
       "./app2",
       "./app3"
