--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -4,6 +4,7 @@
     "./app1",
     "./app2"
   ],
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=automatic-vendor-sharing_app* --parallel start",
