--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -5,6 +5,9 @@
     "./app2",
     "./app3"
   ],
+  "private": true,
+
+
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=dynamic-remotes_app* --parallel start",
