--- a/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
@@ -4,6 +4,9 @@
     "./host",
     "./remote"
   ],
+  "private": true,
+
+
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel start",
