--- a/advanced-api/dynamic-remotes-synchronous-imports/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/package.json
@@ -4,6 +4,9 @@
     "./app1",
     "./app2"
   ],
+  "private": true,
+
+
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel start",
