--- a/angular14-react/package.json
+++ b/angular14-react/package.json
@@ -4,6 +4,7 @@
     "./angular-profile",
     "./react-user-list"
   ],
+  "private": true,
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
