--- a/frontend-discovery-service/package.json
+++ b/frontend-discovery-service/package.json
@@ -1,5 +1,7 @@
 {
   "name": "frontend-discovery-service-module-federation-example",
+  "private": true,
+
 
   "scripts": {
     "build": "npm run build --workspaces",
