--- a/genesis/package.json
+++ b/genesis/package.json
@@ -1,7 +1,9 @@
 {
   "name": "genesis",
+  "private": true,
 
-    "workspaces": [
+
+  "workspaces": [
       "./ssr-mf-about",
       "./ssr-mf-home"
     ],
