--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -1,7 +1,9 @@
 {
   "name": "medusa-example",
+  "private": true,
 
-    "workspaces": [
+
+  "workspaces": [
       "./dsl",
       "./home",
       "./nav",
