--- a/medusa-nx-native-federation-example/package.json
+++ b/medusa-nx-native-federation-example/package.json
@@ -2,6 +2,7 @@
   "name": "medusa-nx-native-federation-example",
   "version": "1.0.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "dsl:build": "npx nx run dsl:build --verbose",
     "dsl:build:production": "npx nx run dsl:build:production --verbose --skip-nx-cache",
