--- a/nested/package.json
+++ b/nested/package.json
@@ -5,6 +5,8 @@
     "./app2",
     "./app3"
   ],
+  "private": true,
+
   "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=nested_app* --parallel start",
