--- a/nextjs-ssr-delegate-modules/package.json
+++ b/nextjs-ssr-delegate-modules/package.json
@@ -6,6 +6,9 @@
     "./home",
     "./shop"
   ],
+  "private": true,
+
+
   "scripts": {
     "start": "concurrently \"cd checkout; npm run dev\" \"cd home; npm run dev\" \"cd shop; npm run dev\"",
     "build": "concurrently \"cd checkout; npm run build\" \"cd home; npm run build\" \"cd shop; npm run build\"",
