--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "angular12-microfrontends",
     "angular14-react",
     "angular14-react/*",
-    "angular15-vue3",
+    "angular15-vue3/*",
     "apollo-client",
     "apollo-client/*",
     "basic-host-remote",
