--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -102,6 +102,7 @@ jobs:
       - name: Create matrix
         id: set-matrix
         run: |
+          npm i lerna@6 -g
           matrix="$(node checkChangedWorkspaces.js)"
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
