--- a/vite-react-microfrontends/remote/package.json
+++ b/vite-react-microfrontends/remote/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "vite-react-microfrontends_remote",
-
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
@@ -10,16 +9,17 @@
 	},
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"vite-react-microfrontends": "file:.."
 	},
 	"devDependencies": {
-		"@module-federation/vite": "0.2.6",
-		"@softarc/native-federation": "1.1.2",
-		"@softarc/native-federation-esbuild": "1.1.1",
-		"@types/react": "18.0.38",
-		"@types/react-dom": "18.0.11",
-		"@vitejs/plugin-react": "3.1.0",
+		"@module-federation/vite": "0.2.8",
+		"@softarc/native-federation": "2.0.4",
+		"@softarc/native-federation-esbuild": "2.0.4",
+		"@types/react": "18.2.33",
+		"@types/react-dom": "18.2.14",
+		"@vitejs/plugin-react": "4.1.0",
 		"typescript": "4.9.4",
-		"vite": "4.0.4"
+		"vite": "4.5.0"
 	}
 }
