--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -6,11 +6,11 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently \"cd app1; yarn dev\" \"cd app2; yarn dev\"",
-    "build": "concurrently \"cd app1; yarn build\" \"cd app2; yarn build\"",
-    "serve": "concurrently \"cd app1; yarn serve\" \"cd app2; yarn serve\"",
-    "clean": "concurrently \"cd app1; yarn reset\" \"cd app2; yarn reset\"",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "start": "pnpm --filter bi-directional_* run dev",
+    "build": "pnpm --filter bi-directional_* run build",
+    "serve": "pnpm --filter bi-directional_* run serve",
+    "clean": "pnpm --filter bi-directional_* run reset",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "7.6.0",
