--- a/bi-directional/app1/package.json
+++ b/bi-directional/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-app1",
+  "name": "bi-directional_app1",
   "version": "0.1.0",
   "scripts": {
     "reset": "npx rimraf ./**/node_modules",
