--- a/comprehensive-demo-react18/package.json
+++ b/comprehensive-demo-react18/package.json
@@ -1,6 +1,5 @@
 {
   "name": "comprehensive-demo-react18",
-
   "workspaces": [
     "./app-01",
     "./app-02",
@@ -14,7 +13,7 @@
     "build": "pnpm --filter comprehensive-demo-react18_app* build",
     "serve": "pnpm --filter comprehensive-demo-react18_app* --parallel serve",
     "clean": "pnpm --filter comprehensive-demo-react18_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "7.6.0",
