--- a/different-react-versions-16-17/app2/package.json
+++ b/different-react-versions-16-17/app2/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@different-react-versions-16-17/app2",
+  "name": "different-react-versions-16-17_app2",
   "version": "0.0.0",
-
   "devDependencies": {
     "@babel/core": "7.21.4",
     "@babel/plugin-proposal-class-properties": "7.18.6",
