Convert more projects

--- a/different-react-versions-16-17-typescript/app2/package.json
+++ b/different-react-versions-16-17-typescript/app2/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@different-react-versions-16-17-typescript/app2",
+  "name": "different-react-versions-16-17-typescript_app2",
   "version": "0.0.0",
-
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack --mode production",
