--- a/different-react-versions-16-17-typescript/package.json
+++ b/different-react-versions-16-17-typescript/package.json
@@ -1,16 +1,11 @@
 {
   "name": "different-react-versions-16-17-typescript",
   "version": "0.0.0",
-    "workspaces": [
-      "app1",
-      "app2"
-    ],
   "scripts": {
-    "start": "pnpm --filter --parallel start",
-    "build": "pnpm --filter build",
-    "serve": "pnpm --filter --parallel serve",
-    "clean": "pnpm --filter --parallel clean"
+    "start": "pnpm --filter different-react-versions-16-17-typescript_* --parallel start",
+    "build": "pnpm --filter different-react-versions-16-17-typescript_* build",
+    "serve": "pnpm --filter different-react-versions-16-17-typescript_* --parallel serve",
+    "clean": "pnpm --filter different-react-versions-16-17-typescript_* --parallel clean"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
