--- a/different-react-versions-16-18/package.json
+++ b/different-react-versions-16-18/package.json
@@ -1,18 +1,15 @@
 {
   "name": "different-react-versions-16-18",
-
   "version": "1.0.0",
-    "workspaces": [
-      "app1",
-      "app2"
-    ],
+  "workspaces": [
+    "app1",
+    "app2"
+  ],
   "scripts": {
-    "start": "pnpm --filter --parallel start",
-    "build": "pnpm --filter build",
-    "serve": "pnpm --filter --parallel serve",
-    "clean": "pnpm --filter --parallel clean"
+    "start": "pnpm --filter different-react-versions-16-18_* --parallel start",
+    "build": "pnpm --filter different-react-versions-16-18_* build",
+    "serve": "pnpm --filter different-react-versions-16-18_* --parallel serve",
+    "clean": "pnpm --filter different-react-versions-16-18_* --parallel clean"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
